@@ -469,3 +469,4 @@ DONE: Added option to enable lighting.
 ADDED: You can make screenshots, both manually with a key or automatically from the command line.
 ADDED: You can also make screenshots of the whole level.
 ADDED: Whole-level screenshots can optionally show extra info, like door events.
+ADDED: You can also start level 0 (demo) and level 15 (potions) from the command line.
